chore: update integration
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>