@@ -26,6 +26,7 @@
         <weld.se.core.version>5.1.0.Final</weld.se.core.version>
         <smallrye.config.version>3.1.1</smallrye.config.version>
         <microstream.data.version>0.0.1</microstream.data.version>
+        <argLine> --add-opens java.base/java.lang=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED </argLine>
     </properties>
 
     <dependencies>
